--- a/attendance.html
+++ b/attendance.html
@@ -1,2 +1,5 @@
-<h2 class="section-title">Attendance Management</h2>
-<p>View and manage student attendance records.</p>
+<div class="attendance-management-content">
+  <h2 class="section-title">Attendance Management</h2>
+  <p>View and manage student attendance records.</p>
+  <!-- More content here -->
+</div>
