--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Dashboard | ID System </title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="style.css" rel="stylesheet">
 </head>
@@ -61,6 +63,10 @@
     <div class="container-fluid p-0">
     <div id="contentContainer" class="p-4"></div>
     </div>
+
+      <button id="backToTopBtn" title="Back to Top" aria-label="Back to Top">
+    <i class="fas fa-chevron-up"></i>
+  </button>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
